fix scrollbar color

--- a/Modular/main.css
+++ b/Modular/main.css
@@ -419,12 +419,12 @@ body:has(.vc-spotify-pause) #vc-spotify-song-title {
 	width: 6px;
 }
 .form-3gdLxP .textArea-2CLwUE>div::-webkit-scrollbar-track {
-	background: var(--background-modifier-accent);
+	background: var(--scrollbar-auto-track);
 	border-radius: var(--modular-border-radius) !important;
 }
 .form-3gdLxP .textArea-2CLwUE>div::-webkit-scrollbar-thumb {
 	height: 30px;
-	background: hsla(var(--modular-accent-color));
+	background: var(--scrollbar-auto-thumb);
 	border-radius: var(--modular-border-radius) !important;
 }
 .characterCount-8yNPfb {
